--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kalam House Group</title>
+<title>Kalam House Batch 22-26</title>
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -41,9 +41,26 @@
     .profile p {
         color: #666;
     }
+
+    .button {
+        display: inline-block;
+        background-color: #4CAF50;
+        border: none;
+        color: white;
+        padding: 10px 20px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin-bottom: 20px;
+        cursor: pointer;
+        border-radius: 5px;
+    }
 </style>
 </head>
 <body>
+
+<a href="https://ibb.co/1nZVHjq" class="button">House Achievements</a>
 
 <div class="container">
     <div class="profile">
@@ -101,7 +118,49 @@
         <h2>Mir Abusalam</h2>
         <p>Member, Kalam House Group</p>
     </div>
+    <div class="profile">
+        <img src="https://i.ibb.co/zbxhYKS/profile12.jpg" alt="Profile Picture">
+        <h2>Kalyani Palai</h2>
+        <p>Member, Kalam House Group</p>
+    </div>
+    <div class="profile">
+        <img src="https://i.ibb.co/fvb9f4R/profile13.jpg" alt="Profile Picture">
+        <h2>Satyam</h2>
+        <p>Member, Kalam House Group</p>
+    </div>
+    <div class="profile">
+        <img src="https://i.ibb.co/chRS13T/profile14.jpg" alt="Profile Picture">
+        <h2>Partha Pratim</h2>
+        <p>Member, Kalam House Group</p>
+    </div>
+    <div class="profile">
+        <img src="https://i.ibb.co/nzp2MJg/profile15.jpg" alt="Profile Picture">
+        <h2>Bishal</h2>
+        <p>Member, Kalam House Group</p>
+    </div>
+    <div class="profile">
+        <img src="https://i.ibb.co/37dtGRL/profile16.jpg" alt="Profile Picture">
+        <h2>Sumit</h2>
+        <p>Member, Kalam House Group</p>
+    </div>
+    <div class="profile">
+        <img src="https://i.ibb.co/YD4R3St/profile17.jpg" alt="Profile Picture">
+        <h2>Jagadish</h2>
+        <p>Member, Kalam House Group</p>
+    </div>
+    <div class="profile">
+        <img src="https://i.ibb.co/ykhVBPc/profile18.jpg" alt="Profile Picture">
+        <h2>Nijamuddin</h2>
+        <p>Member, Kalam House Group</p>
+    </div>
+    <div class="profile">
+        <img src="https://i.ibb.co/0GX0wpw/profile19.jpg" alt="Profile Picture">
+        <h2>Ashutosh</h2>
+        <p>Member, Kalam House Group</p>
+    </div>
 </div>
+
+<a href="https://ibb.co/1nZVHjq" class="button">House Achievements</a>
 
 </body>
 </html>
