--- a/index.html
+++ b/index.html
@@ -160,6 +160,24 @@
         <h2>Ashutosh</h2>
         <p>Member, Kalam House Group</p>
     </div>
+    <div class="profile">
+    <img src="https://i.ibb.co/5rBht3R/profile20.jpg" alt="Profile Picture">
+    <h2>Dipen Debasish</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/BnYD7Cj/profile21.jpg" alt="Profile Picture">
+    <h2>Gyana Ranjan</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/MCWGkPh/profile22.jpg" alt="Profile Picture">
+    <h2>Gaurav Tripathi</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
 </div>
 
 <a href="https://ibb.co/1nZVHjq" class="button">House Achievements</a>
