--- a/index.html
+++ b/index.html
@@ -177,7 +177,17 @@
     <h2>Gaurav Tripathi</h2>
     <p>Member, Kalam House Group</p>
 </div>
+<div class="profile">
+    <img src="https://i.ibb.co/7rQ5y3n/profile23.jpg" alt="Profile Picture">
+    <h2>Adyasha</h2>
+    <p>Member, Kalam House Group</p>
+</div>
 
+<div class="profile">
+    <img src="https://i.ibb.co/4K9GJP8/profile24.jpg" alt="Profile Picture">
+    <h2>Samprita</h2>
+    <p>Member, Kalam House Group</p>
+</div>
 </div>
 
 <a href="https://ibb.co/1nZVHjq" class="button">House Achievements</a>
