--- a/index.html
+++ b/index.html
@@ -75,11 +75,12 @@
         <h2>Suhanee..</h2>
         <p>CR, Kalam House</p>
     </div>
-    <div class="profile">
-        <img src="https://i.ibb.co/SQFtCmF/profile3.jpg" alt="Profile Picture">
-        <h2>Md Sidik</h2>
-        <p>Member, Kalam House Group</p>
-    </div>
+   <div class="profile">
+    <img src="https://i.ibb.co/vJ5YbW7/profile3.jpg" alt="Profile Picture">
+    <h2>Md Sidik</h2>
+    <p>Member, Kalam House </p>
+</div>
+
     <div class="profile">
         <img src="https://i.ibb.co/N7Kxm8p/profile4.jpg" alt="Profile Picture">
         <h2>Bibhu baliarsingh</h2>
