--- a/index.html
+++ b/index.html
@@ -189,6 +189,71 @@
     <h2>Samprita</h2>
     <p>Member, Kalam House Group</p>
 </div>
+    <div class="profile">
+    <img src="https://i.ibb.co/XxK9LTY/soumyanshu.jpg" alt="Profile Picture">
+    <h2>Soumyanshu</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/XbfyNBn/piyush.jpg" alt="Profile Picture">
+    <h2>Piyush</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/FH8JG5L/babul-shil.jpg" alt="Profile Picture">
+    <h2>Babul Shil</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/QfhRdZF/soham.jpg" alt="Profile Picture">
+    <h2>Soham</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/n6pcL12/jiban.jpg" alt="Profile Picture">
+    <h2>Jiban</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/8409K8R/sourav.jpg" alt="Profile Picture">
+    <h2>Sourav</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/L6FSH5j/subrat.jpg" alt="Profile Picture">
+    <h2>Subrat</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/9rf4X4B/tushar.jpg" alt="Profile Picture">
+    <h2>Tushar</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/MGmDXVF/chinmay.jpg" alt="Profile Picture">
+    <h2>Chinmay</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/PtzpVZY/sourav-pandav.jpg" alt="Profile Picture">
+    <h2>Sourav Pandav</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/Wzz56Zw/rana-pratap.jpg" alt="Profile Picture">
+    <h2>Rana Pratap</h2>
+    <p>Member, Kalam House Group</p>
+</div>
 </div>
 
 <a href="https://ibb.co/1nZVHjq" class="button">House Achievements</a>
