--- a/index.html
+++ b/index.html
@@ -146,11 +146,12 @@
         <h2>Sumit</h2>
         <p>Member, Kalam House Group</p>
     </div>
-    <div class="profile">
-        <img src="https://i.ibb.co/YD4R3St/profile17.jpg" alt="Profile Picture">
-        <h2>Jagadish</h2>
-        <p>Member, Kalam House Group</p>
-    </div>
+ <div class="profile">
+    <img src="https://i.ibb.co/dG99j0n/profile17.jpg" alt="Profile Picture">
+    <h2>Jagadish</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
     <div class="profile">
         <img src="https://i.ibb.co/ykhVBPc/profile18.jpg" alt="Profile Picture">
         <h2>Nijamuddin</h2>
@@ -252,6 +253,23 @@
 <div class="profile">
     <img src="https://i.ibb.co/Wzz56Zw/rana-pratap.jpg" alt="Profile Picture">
     <h2>Rana Pratap</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+    <div class="profile">
+    <img src="https://i.ibb.co/qxpRpB8/ashish.jpg" alt="Profile Picture">
+    <h2>Ashish</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/XYVhQM1/tushar.jpg" alt="Profile Picture">
+    <h2>Tushar</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/r0pvfLN/dibya-ranjan.jpg" alt="Profile Picture">
+    <h2>Dibya Ranjan</h2>
     <p>Member, Kalam House Group</p>
 </div>
 </div>
