--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 <div class="profile">
     <img src="https://i.ibb.co/n6pcL12/jiban.jpg" alt="Profile Picture">
     <h2>Jiban</h2>
-    <p>Member, Kalam House Group</p>
+    <p>Singer, Kalam House Group</p>
 </div>
 
 <div class="profile">
