--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
    <div class="profile">
     <img src="https://i.ibb.co/vJ5YbW7/profile3.jpg" alt="Profile Picture">
     <h2>Md Sidik</h2>
-    <p>Member, Kalam House </p>
+    <p>Digital Developer, Kalam House </p>
 </div>
 
     <div class="profile">
@@ -89,12 +89,12 @@
     <div class="profile">
         <img src="https://i.ibb.co/5cv02gT/profile5.jpg" alt="Profile Picture">
         <h2>Biswakalyan Utgata</h2>
-        <p> Member , Kalam House</p>
+        <p> Volleyball Player , Kalam House</p>
     </div>
     <div class="profile">
         <img src="https://i.ibb.co/G9JNMqZ/profile6.jpg" alt="Profile Picture">
         <h2>Ritesh Kumar</h2>
-        <p>Member, Kalam House Group</p>
+        <p>Kho Kho Player, Kalam House Group</p>
     </div>
     <div class="profile">
         <img src="https://i.ibb.co/HhMBvQG/profile7.jpg" alt="Profile Picture">
@@ -104,12 +104,12 @@
     <div class="profile">
         <img src="https://i.ibb.co/Fz2hFvs/profile8.jpg" alt="Profile Picture">
         <h2>Subhra</h2>
-        <p>Member, Kalam House Group</p>
+        <p>Event Designer, Kalam House Group</p>
     </div>
     <div class="profile">
         <img src="https://i.ibb.co/T1dCSvR/profile9.jpg" alt="Profile Picture">
         <h2>Subhalaxmi</h2>
-        <p>Member, Kalam House Group</p>
+        <p>Event Manager, Kalam House Group</p>
     </div>
     <div class="profile">
         <img src="https://i.ibb.co/kDxbXx7/profile10.jpg" alt="Profile Picture">
@@ -139,7 +139,7 @@
     <div class="profile">
         <img src="https://i.ibb.co/nzp2MJg/profile15.jpg" alt="Profile Picture">
         <h2>Bishal</h2>
-        <p>Member, Kalam House Group</p>
+        <p>Good Mathametician, Kalam House Group</p>
     </div>
     <div class="profile">
         <img src="https://i.ibb.co/37dtGRL/profile16.jpg" alt="Profile Picture">
@@ -149,7 +149,7 @@
  <div class="profile">
     <img src="https://i.ibb.co/dG99j0n/profile17.jpg" alt="Profile Picture">
     <h2>Jagadish</h2>
-    <p>Member, Kalam House Group</p>
+    <p>Blogger, Kalam House Group</p>
 </div>
 
     <div class="profile">
@@ -165,7 +165,7 @@
     <div class="profile">
     <img src="https://i.ibb.co/5rBht3R/profile20.jpg" alt="Profile Picture">
     <h2>Dipen Debasish</h2>
-    <p>Member, Kalam House Group</p>
+    <p>Digital Producer, Kalam House Group</p>
 </div>
 
 <div class="profile">
@@ -193,7 +193,7 @@
     <div class="profile">
     <img src="https://i.ibb.co/XxK9LTY/soumyanshu.jpg" alt="Profile Picture">
     <h2>Soumyanshu</h2>
-    <p>Member, Kalam House Group</p>
+    <p>Digital Manager, Kalam House Group</p>
 </div>
 
 <div class="profile">
@@ -223,7 +223,7 @@
 <div class="profile">
     <img src="https://i.ibb.co/8409K8R/sourav.jpg" alt="Profile Picture">
     <h2>Sourav</h2>
-    <p>Member, Kalam House Group</p>
+    <p>Gammer, Kalam House Group</p>
 </div>
 
 <div class="profile">
@@ -235,7 +235,7 @@
 <div class="profile">
     <img src="https://i.ibb.co/9rf4X4B/tushar.jpg" alt="Profile Picture">
     <h2>Tushar</h2>
-    <p>Member, Kalam House Group</p>
+    <p>Badminton Player, Kalam House Group</p>
 </div>
 
 <div class="profile">
@@ -270,7 +270,7 @@
 <div class="profile">
     <img src="https://i.ibb.co/r0pvfLN/dibya-ranjan.jpg" alt="Profile Picture">
     <h2>Dibya Ranjan</h2>
-    <p>Member, Kalam House Group</p>
+    <p>Digital Marketer, Kalam House Group</p>
 </div>
 </div>
 
