--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 <div class="profile">
     <img src="https://i.ibb.co/9rf4X4B/tushar.jpg" alt="Profile Picture">
     <h2>Tushar</h2>
-    <p>Badminton Player, Kalam House Group</p>
+    <p>Blogger, Kalam House Group</p>
 </div>
 
 <div class="profile">
@@ -272,6 +272,60 @@
     <h2>Dibya Ranjan</h2>
     <p>Digital Marketer, Kalam House Group</p>
 </div>
+    <div class="profile">
+    <img src="https://i.ibb.co/F4B2w6n/abeer.jpg" alt="Profile Picture">
+    <h2>Abeer</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/yhv68mq/sibsambhu.jpg" alt="Profile Picture">
+    <h2>Sibsambhu</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/0nPBMpQ/tushartta.jpg" alt="Profile Picture">
+    <h2>Tushartta</h2>
+    <p>Singer/Badminton player, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/FHLRh6B/sonali.jpg" alt="Profile Picture">
+    <h2>Sonali</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/7N6hKH2/aditya.jpg" alt="Profile Picture">
+    <h2>Aditya</h2>
+    <p>Photographer, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/MZFRJqq/omm-mallik.jpg" alt="Profile Picture">
+    <h2>Omm Mallik</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/q9yBr9k/ajit-kumar.jpg" alt="Profile Picture">
+    <h2>Ajit Kumar</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/n8LPgDV/debadatta.jpg" alt="Profile Picture">
+    <h2>Debadatta</h2>
+    <p>Sports Manager, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/HDHVwJg/purushottam.jpg" alt="Profile Picture">
+    <h2>Purushottam</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
 </div>
 
 <a href="https://ibb.co/1nZVHjq" class="button">House Achievements</a>
