--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
     </div>
     <div class="profile">
         <img src="https://i.ibb.co/5cv02gT/profile5.jpg" alt="Profile Picture">
-        <h2>Biswakalyan Utgata</h2>
-        <p> Volleyball Player , Kalam House</p>
+        <h2>Biswakalyan Udgata</h2>
+        <p> Sports Man, Kalam House</p>
     </div>
     <div class="profile">
         <img src="https://i.ibb.co/G9JNMqZ/profile6.jpg" alt="Profile Picture">
