--- a/index.html
+++ b/index.html
@@ -325,6 +325,35 @@
     <h2>Purushottam</h2>
     <p>Member, Kalam House Group</p>
 </div>
+<div class="profile">
+    <img src="https://i.ibb.co/vxhwFBx/lilan.jpg" alt="Profile Picture">
+    <h2>Lilan</h2>
+    <p>Cricketer, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/YR5RvxH/subham.jpg" alt="Profile Picture">
+    <h2>Subham</h2>
+    <p>Photographer, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/tbvbdvL/ramesh.jpg" alt="Profile Picture">
+    <h2>Ramesh</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/FsdDyM1/jayashree.jpg" alt="Profile Picture">
+    <h2>Jayashree</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/X3Ysry1/sadhna.jpg" alt="Profile Picture">
+    <h2>Sadhna</h2>
+    <p>Member, Kalam House Group</p>
+</div>
 
 </div>
 
