--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <p>CR, Kalam House</p>
     </div>
     <div class="profile">
-        <img src="https://i.ibb.co/wg1DXrS/profile2.jpg" alt="Profile Picture">
+        <img src="https://i.ibb.co/xHzM5gP/suhani.jpg" alt="Profile Picture">
         <h2>Suhanee..</h2>
         <p>CR, Kalam House</p>
     </div>
@@ -352,6 +352,83 @@
 <div class="profile">
     <img src="https://i.ibb.co/X3Ysry1/sadhna.jpg" alt="Profile Picture">
     <h2>Sadhna</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+<div class="profile">
+    <img src="https://i.ibb.co/vjNgDXM/rajib.jpg" alt="Profile Picture">
+    <h2>Rajib</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/KNvwqr4/ratikant.jpg" alt="Profile Picture">
+    <h2>Ratikant</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/9VmBq6f/manisha.jpg" alt="Profile Picture">
+    <h2>Manisha</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/0fQgQf0/suman.jpg" alt="Profile Picture">
+    <h2>Suman</h2>
+    <p>Event Manager, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/yyr3Mmp/raja.jpg" alt="Profile Picture">
+    <h2>Raja</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/fnMkSgm/roshan.jpg" alt="Profile Picture">
+    <h2>Roshan</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/LryMkn2/sujata.jpg" alt="Profile Picture">
+    <h2>Sujata</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/TmmKDqt/sandeep.jpg" alt="Profile Picture">
+    <h2>Sandeep</h2>
+    <p>Photographer, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/X3z60pX/abhinash.jpg" alt="Profile Picture">
+    <h2>Abhinash</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/9qSLDJp/bighnaraj.jpg" alt="Profile Picture">
+    <h2>Bighnaraj</h2>
+    <p>Sports Man, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/M2Rp4R7/shubharaj.jpg" alt="Profile Picture">
+    <h2>Shubharaj</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/NrWz8vz/prince.jpg" alt="Profile Picture">
+    <h2>Prince</h2>
+    <p>Member, Kalam House Group</p>
+</div>
+
+<div class="profile">
+    <img src="https://i.ibb.co/8MTTByX/sneha.jpg" alt="Profile Picture">
+    <h2>Sneha</h2>
     <p>Member, Kalam House Group</p>
 </div>
 
