--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <p>Member, Kalam House Group</p>
     </div>
     <div class="profile">
-        <img src="https://i.ibb.co/Fz2hFvs/profile8.jpg" alt="Profile Picture">
+        <img src="https://i.ibb.co/qk5fvy5/subhra.jpg" alt="Profile Picture">
         <h2>Subhra</h2>
         <p>Event Designer, Kalam House Group</p>
     </div>
