--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <div class="profile">
         <img src="https://i.ibb.co/fvb9f4R/profile13.jpg" alt="Profile Picture">
         <h2>Satyam</h2>
-        <p>Member, Kalam House Group</p>
+        <p>Dancer, Kalam House Group</p>
     </div>
     <div class="profile">
         <img src="https://i.ibb.co/chRS13T/profile14.jpg" alt="Profile Picture">
@@ -144,7 +144,7 @@
     <div class="profile">
         <img src="https://i.ibb.co/37dtGRL/profile16.jpg" alt="Profile Picture">
         <h2>Sumit</h2>
-        <p>Member, Kalam House Group</p>
+        <p>Dancer, Kalam House Group</p>
     </div>
  <div class="profile">
     <img src="https://i.ibb.co/dG99j0n/profile17.jpg" alt="Profile Picture">
@@ -369,7 +369,7 @@
 <div class="profile">
     <img src="https://i.ibb.co/9VmBq6f/manisha.jpg" alt="Profile Picture">
     <h2>Manisha</h2>
-    <p>Member, Kalam House Group</p>
+    <p>Dancer, Kalam House Group</p>
 </div>
 
 <div class="profile">
