--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div class="profile">
         <img src="https://i.ibb.co/zbxhYKS/profile12.jpg" alt="Profile Picture">
         <h2>Kalyani Palai</h2>
-        <p>Member, Kalam House Group</p>
+        <p>Sports Girl, Kalam House Group</p>
     </div>
     <div class="profile">
         <img src="https://i.ibb.co/fvb9f4R/profile13.jpg" alt="Profile Picture">
@@ -182,13 +182,13 @@
 <div class="profile">
     <img src="https://i.ibb.co/7rQ5y3n/profile23.jpg" alt="Profile Picture">
     <h2>Adyasha</h2>
-    <p>Member, Kalam House Group</p>
+    <p>Topper, Kalam House Group</p>
 </div>
 
 <div class="profile">
     <img src="https://i.ibb.co/4K9GJP8/profile24.jpg" alt="Profile Picture">
     <h2>Samprita</h2>
-    <p>Member, Kalam House Group</p>
+    <p>Topper, Kalam House Group</p>
 </div>
     <div class="profile">
     <img src="https://i.ibb.co/XxK9LTY/soumyanshu.jpg" alt="Profile Picture">
