--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="profile">
         <img src="https://i.ibb.co/QJTw4J7/profile1.jpg" alt="Profile Picture">
         <h2>Soumya Ranjan</h2>
-        <p>CR, Kalam House</p>
+        <p>CR (Topper), Kalam House</p>
     </div>
     <div class="profile">
         <img src="https://i.ibb.co/xHzM5gP/suhani.jpg" alt="Profile Picture">
@@ -124,7 +124,7 @@
     <div class="profile">
         <img src="https://i.ibb.co/zbxhYKS/profile12.jpg" alt="Profile Picture">
         <h2>Kalyani Palai</h2>
-        <p>Sports Girl, Kalam House Group</p>
+        <p>Member, Kalam House Group</p>
     </div>
     <div class="profile">
         <img src="https://i.ibb.co/fvb9f4R/profile13.jpg" alt="Profile Picture">
